# inmo-insight

./: .gitignore  LICENSE  README.md  pyproject.toml
airflow/: docker-compose.yaml
airflow/common/: constants.py  santiago_geolocation.py  types.py  utils.py
airflow/config/: airflow.cfg
airflow/dags/: pipeline.py
airflow/dags/data/: batch_input.jsonl  batch_output.jsonl  supercasas_enriched.csv
airflow/enrich/: supercasas.py
airflow/extract/: supercasas.py
airflow/load/: supercasas.py
airflow/scappers/: supercasas.py
airflow/transform/: supercasas.py
common/: constants.py  utils.py
data/: inmo-insigh.twb  supercasas_data.csv
model/: __init__.py  predict.py  train_rent_predictor.py  visualize.py
model/artifacts/: encoders.joblib  metadata.json  rent_predictor.joblib  test_predictions.csv
