[project]
name = "inmo-insight"
version = "1.0.0"
description = "End-to-end data engineering and analytics pipeline for real estate market analysis, leveraging official APIs, Apache Airflow, PostgreSQL, and BI dashboards."
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "bs4>=0.0.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "xgboost>=3.1.3",
]
